--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,9 @@ h1, h2, h3, h4, h5, h6{
 
 .headline{
 	margin: 20px 0px;
-	font-size: 24px;
+	font-size: 26px;
 	text-align: center;
+	/* color: #289A74; */
 }
 
 .desc-curta{
