--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,14 @@ ol{
 
 /* GENERAL ------------------------------------------------------------*/
 
+@font-face {
+    font-family: din-condensed;
+    src: url(../fonts/FF_DIN_Condensed_Bold.otf);
+}
+@font-face {
+    font-family: rene-bieder;
+    src: url(../fonts/ReneBieder-GalanoClassico.otf);
+}
 
 body {
 	line-height: 1;
@@ -58,9 +66,11 @@ h1, h2, h3, h4, h5, h6{
 
 .headline{
 	margin: 20px 0px;
-	font-size: 26px;
+	font-size: 45px;
 	text-align: center;
-	/* color: #289A74; */
+	font-family: din-condensed;
+	/*color: #07A0AE;*/
+	color: #07747C;
 }
 
 .desc-curta{
