--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,8 @@ h1, h2, h3, h4, h5, h6{
 #header{
 	height: 134px;
 	background: #e5e3dc url(../img/bgs/webtreats/ContracantosCapa.jpg);
+	background-size: 100%;
+	background-position: 0% 400px;
 	border-bottom: 1px solid #fff;
 }
 
@@ -99,8 +101,7 @@ h1, h2, h3, h4, h5, h6{
 	background: #e5e3dc url(../img/bgs/webtreats/ContracantosCapa.jpg);
 	border-bottom: 1px solid #fff;
 	background-size: 100%;
-    background-position: 0% 400px;
-
+  background-position: 0% 400px;
 }
 
 #home-header .degree,
